--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -1,5 +1,5 @@
-<div class="row justify-content-center">
-    <div class="col-8">
+<div class="row post-edit-view">
+    <div class="col-8 editor-wrap">
         <form name="editForm" role="form" novalidate (ngSubmit)="saveOrPublish('Draft')" #editForm="ngForm">
             <h2 id="jhi-post-heading" jhiTranslate="gatewayApp.corePost.home.createOrEditLabel">Create or edit a
                 Post</h2>
@@ -81,125 +81,131 @@
                         <span [(ngModel)]="post.featuredMedia" name="featuredMedia" ngDefaultControl></span>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label jhiTranslate="gatewayApp.corePost.tag" for="field_tag">Tag</label>
-                    <br>
-                    <input [(ngModel)]="searchTagKeyword" [ngModelOptions]="{standalone: true}">
-                    <button type="button" class="btn btn-success" (click)="searchTagCurrentPage=0;searchTags()">
-                        Search Tag
+                <div>
+                    <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
+                        <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
                     </button>
-                    <button type="button" class="btn btn-success" (click)="getAllTags()">
-                        Reset
+                    <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving"
+                            class="btn btn-primary" *ngIf="showSave">
+                        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span
+                        jhiTranslate="entity.action.savedraft">Save Draft</span>
                     </button>
-                    <br>
-                    <jhi-multiple-checkbox id="field_tag"
-                                           [option_list]="all_tag_options"
-                                           [selected_options]="selected_tag_options"
-                                           (updated_selection)="update_tag_selection($event)">
-                    </jhi-multiple-checkbox>
-                    <button type="button"
-                            class="btn btn-success"
-                            (click)="searchTagCurrentPage=searchTagCurrentPage-1;searchTags()"
-                            *ngIf="searchTagCurrentPage>0">
-                        Previous
-                    </button>
-                    <button type="button"
-                            class="btn btn-success"
-                            (click)="searchTagCurrentPage=searchTagCurrentPage+1;searchTags()"
-                            *ngIf="searchTagTotalResult>((searchTagCurrentPage+1)*searchResultPerPage)">
-                        Next
+                    <button type="button" id="publish-entity" [disabled]="editForm.form.invalid || isSaving"
+                            class="btn btn-primary" *ngIf="showPublish" (click)="saveOrPublish('Publish')">
+                        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span
+                        jhiTranslate="entity.action.publish">Publish</span>
                     </button>
                 </div>
-                <div class="form-group">
-                    <label jhiTranslate="gatewayApp.corePost.category" for="field_category">Category</label>
-                    <br>
-                    <input [(ngModel)]="searchCategoryKeyword" [ngModelOptions]="{standalone: true}">
-                    <button type="button" class="btn btn-success" (click)="searchCategoryCurrentPage=0;searchCategories()">
-                        Search Category
-                    </button>
-                    <button type="button" class="btn btn-success" (click)="getAllCategories()">
-                        Reset
-                    </button>
-                    <br>
-                    <jhi-multiple-checkbox id="field_category"
-                                           [option_list]="all_category_options"
-                                           [selected_options]="selected_category_options"
-                                           (updated_selection)="update_category_selection($event)">
-                    </jhi-multiple-checkbox>
-                    <button type="button"
-                            class="btn btn-success"
-                            (click)="searchCategoryCurrentPage=searchCategoryCurrentPage-1;searchCategories()"
-                            *ngIf="searchCategoryCurrentPage>0">
-                        Previous
-                    </button>
-                    <button type="button"
-                            class="btn btn-success"
-                            (click)="searchCategoryCurrentPage=searchCategoryCurrentPage+1;searchCategories()"
-                            *ngIf="searchCategoryTotalResult>((searchCategoryCurrentPage+1)*searchResultPerPage)">
-                        Next
-                    </button>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.corePost.format" for="field_format">Format</label>
-                    <select class="form-control" id="field_format" name="format" [(ngModel)]="post.formatId" required>
-                        <option [ngValue]="formatOption.id"
-                                *ngFor="let formatOption of formats | orderBy:'name'; trackBy: trackFormatById">
-                            {{formatOption.name}}
-                        </option>
-                    </select>
-                </div>
-                <div [hidden]="!(editForm.controls.format?.dirty && editForm.controls.format?.invalid)">
-                    <small class="form-text text-danger"
-                           [hidden]="!editForm.controls.format?.errors?.required"
-                           jhiTranslate="entity.validation.required">
-                        This field is required.
-                    </small>
-                </div>
-                <div class="form-group">
-                    <label jhiTranslate="gatewayApp.corePost.degaUser" for="field_degaUser">Author</label>
-                    <br>
-                    <input [(ngModel)]="searchDegaUserKeyword" [ngModelOptions]="{standalone: true}">
-                    <button type="button" class="btn btn-success" (click)="searchDegaUserCurrentPage=0;searchDegaUsers()">
-                        Search DegaUser
-                    </button>
-                    <button type="button" class="btn btn-success" (click)="getAllDegaUsers()">
-                        Reset
-                    </button>
-                    <br>
-                    <jhi-multiple-checkbox id="field_degaUser"
-                                           [option_list]="all_author_options"
-                                           [selected_options]="selected_author_options"
-                                           (updated_selection)="update_author_selection($event)">
-
-                    </jhi-multiple-checkbox>
-                    <button type="button"
-                            class="btn btn-success"
-                            (click)="searchDegaUserCurrentPage=searchDegaUserCurrentPage-1;searchDegaUsers()"
-                            *ngIf="searchDegaUserCurrentPage>0">
-                        Previous
-                    </button>
-                    <button type="button"
-                            class="btn btn-success"
-                            (click)="searchDegaUserCurrentPage=searchDegaUserCurrentPage+1;searchDegaUsers()"
-                            *ngIf="searchDegaUserTotalResult>((searchDegaUserCurrentPage+1)*searchResultPerPage)">
-                        Next
-                    </button>
-                </div>
-            </div>
-            <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
-                    <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-                </button>
-                <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving"
-                        class="btn btn-primary" *ngIf="showSave">
-                    <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span
-                    jhiTranslate="entity.action.savedraft">Save Draft</span>
-                </button>
-                <button type="button" id="publish-entity" [disabled]="editForm.form.invalid || isSaving"
-                        class="btn btn-primary" *ngIf="showPublish" (click)="saveOrPublish('Publish')">
-                    <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.publish">Publish</span>
-                </button>
-            </div>
         </form>
     </div>
+    <div class="col-4 edit-view-right-pannel">
+        <div class="form-group">
+            <div class="form-group">
+                <label jhiTranslate="gatewayApp.corePost.tag" for="field_tag">Tag</label>
+                <br>
+                <input [(ngModel)]="searchTagKeyword" [ngModelOptions]="{standalone: true}">
+                <button type="button" class="btn btn-success" (click)="searchTagCurrentPage=0;searchTags()">
+                    Search Tag
+                </button>
+                <button type="button" class="btn btn-success" (click)="getAllTags()">
+                    Reset
+                </button>
+                <br>
+                <jhi-multiple-checkbox id="field_tag"
+                                       [option_list]="all_tag_options"
+                                       [selected_options]="selected_tag_options"
+                                       (updated_selection)="update_tag_selection($event)">
+                </jhi-multiple-checkbox>
+                <button type="button"
+                        class="btn btn-success"
+                        (click)="searchTagCurrentPage=searchTagCurrentPage-1;searchTags()"
+                        *ngIf="searchTagCurrentPage>0">
+                    Previous
+                </button>
+                <button type="button"
+                        class="btn btn-success"
+                        (click)="searchTagCurrentPage=searchTagCurrentPage+1;searchTags()"
+                        *ngIf="searchTagTotalResult>((searchTagCurrentPage+1)*searchResultPerPage)">
+                    Next
+                </button>
+            </div>
+            <div class="form-group">
+                <label jhiTranslate="gatewayApp.corePost.category" for="field_category">Category</label>
+                <br>
+                <input [(ngModel)]="searchCategoryKeyword" [ngModelOptions]="{standalone: true}">
+                <button type="button" class="btn btn-success" (click)="searchCategoryCurrentPage=0;searchCategories()">
+                    Search Category
+                </button>
+                <button type="button" class="btn btn-success" (click)="getAllCategories()">
+                    Reset
+                </button>
+                <br>
+                <jhi-multiple-checkbox id="field_category"
+                                       [option_list]="all_category_options"
+                                       [selected_options]="selected_category_options"
+                                       (updated_selection)="update_category_selection($event)">
+                </jhi-multiple-checkbox>
+                <button type="button"
+                        class="btn btn-success"
+                        (click)="searchCategoryCurrentPage=searchCategoryCurrentPage-1;searchCategories()"
+                        *ngIf="searchCategoryCurrentPage>0">
+                    Previous
+                </button>
+                <button type="button"
+                        class="btn btn-success"
+                        (click)="searchCategoryCurrentPage=searchCategoryCurrentPage+1;searchCategories()"
+                        *ngIf="searchCategoryTotalResult>((searchCategoryCurrentPage+1)*searchResultPerPage)">
+                    Next
+                </button>
+            </div>
+            <div class="form-group">
+                <label class="form-control-label" jhiTranslate="gatewayApp.corePost.format"
+                       for="field_format">Format</label>
+                <select class="form-control" id="field_format" name="format" [(ngModel)]="post.formatId" required>
+                    <option [ngValue]="formatOption.id"
+                            *ngFor="let formatOption of formats | orderBy:'name'; trackBy: trackFormatById">
+                        {{formatOption.name}}
+                    </option>
+                </select>
+            </div>
+            <div [hidden]="!(editForm.controls.format?.dirty && editForm.controls.format?.invalid)">
+                <small class="form-text text-danger"
+                       [hidden]="!editForm.controls.format?.errors?.required"
+                       jhiTranslate="entity.validation.required">
+                    This field is required.
+                </small>
+            </div>
+            <div class="form-group">
+                <label jhiTranslate="gatewayApp.corePost.degaUser" for="field_degaUser">Author</label>
+                <br>
+                <input [(ngModel)]="searchDegaUserKeyword" [ngModelOptions]="{standalone: true}">
+                <button type="button" class="btn btn-success" (click)="searchDegaUserCurrentPage=0;searchDegaUsers()">
+                    Search DegaUser
+                </button>
+                <button type="button" class="btn btn-success" (click)="getAllDegaUsers()">
+                    Reset
+                </button>
+                <br>
+                <jhi-multiple-checkbox id="field_degaUser"
+                                       [option_list]="all_author_options"
+                                       [selected_options]="selected_author_options"
+                                       (updated_selection)="update_author_selection($event)">
+
+                </jhi-multiple-checkbox>
+                <button type="button"
+                        class="btn btn-success"
+                        (click)="searchDegaUserCurrentPage=searchDegaUserCurrentPage-1;searchDegaUsers()"
+                        *ngIf="searchDegaUserCurrentPage>0">
+                    Previous
+                </button>
+                <button type="button"
+                        class="btn btn-success"
+                        (click)="searchDegaUserCurrentPage=searchDegaUserCurrentPage+1;searchDegaUsers()"
+                        *ngIf="searchDegaUserTotalResult>((searchDegaUserCurrentPage+1)*searchResultPerPage)">
+                    Next
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
