--- a/src/main/webapp/app/entities/core/post/post.scss
+++ b/src/main/webapp/app/entities/core/post/post.scss
@@ -174,6 +174,10 @@ $xs-sm-font-size: 12px;
         background: white;
         height: calc(100vh - 65px);
         overflow-y: scroll;
+        padding: 10px 7px;
+        mat-form-field {
+            width: 140px;
+        }
     }
     .example-full-width {
         width: 100%;
