--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -35,7 +35,9 @@
                 <button mat-raised-button type="button" color="primary"
                         replaceUrl="true"
                         [routerLink]="['/', { outlets: { popup: 'featured-media/upload'} }]"
-                        [queryParams]="{ media_type: 'feature'}">Upload</button>
+                        [queryParams]="{ media_type: 'feature'}">Upload Featured media</button>
+                <button mat-raised-button type="button" color="primary"
+                        (click)="deleteMediaForFeature()"> Delete featured media</button>
                 <img [src]='postEditFormGroup.value.featuredMedia' alt="" width="100" height="100">
             </div>
 
