--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -83,6 +83,14 @@ select.ng-invalid:not(form) {
     width: 60% !important;
 }
 
+.margin-t-20 {
+    margin-top: 20px;
+}
+
+.margin-t-30 {
+    margin-top: 30px;
+}
+
 .break {
     white-space: normal;
     word-break: break-all;
