--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -6,7 +6,7 @@
     <jhi-sidebar class="side-bar" (change)="stickNavigation()"></jhi-sidebar>
     <div class="main">
         <div class="container-fluid ">
-            <div class="card jh-card">
+            <div class="jh-card">
                 <router-outlet></router-outlet>
                 <router-outlet name="popup"></router-outlet>
             </div>
